# DlibAndroid

./: .gitignore
app/: build.gradle
app/src/androidTest/java/com/lmy/dlib/sample/: ExampleInstrumentedTest.java  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lmy/dlib/sample/: FaceFilter.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lmy/dlib/sample/: ExampleUnitTest.java  ExampleUnitTest.kt
dlib/: CMakeLists.txt  build.gradle
dlib/src/androidTest/java/com/lmy/dlib/: ExampleInstrumentedTest.java
dlib/src/main/: AndroidManifest.xml
dlib/src/main/cpp/: dlib.cpp
dlib/src/main/cpp/dlib_android/: Java_com_lmy_dlib_Dlib.cpp  Java_com_lmy_dlib_Dlib.h  dlib.cpp  dlib.h
dlib/src/main/java/com/lmy/dlib/: Dlib.kt
dlib/src/test/java/com/lmy/dlib/: ExampleUnitTest.java
